--- a/zookeeper-2.yml
+++ b/zookeeper-2.yml
@@ -1,8 +1,32 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: zookeeper-1
+  namespace: dc2
+spec:
+  type: ExternalName
+  externalName: zookeeper-1.dc1.svc.cluster.local
+  ports:
+  - port: 2181
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper-3
+  namespace: dc2
+spec:
+  type: ExternalName
+  externalName: zookeeper-3.dc3.svc.cluster.local
+  ports:
+  - port: 2181
+
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: zookeeper-2
-  namespace: dc1
+  namespace: dc2
 spec:
   selector:
     app: zookeeper-2
@@ -25,7 +49,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: zookeeper-2
-  namespace: dc1
+  namespace: dc2
   labels:
     app: zookeeper-2
 spec:
