--- a/zookeeper-3.yml
+++ b/zookeeper-3.yml
@@ -1,8 +1,32 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: zookeeper-1
+  namespace: dc3
+spec:
+  type: ExternalName
+  externalName: zookeeper-1.dc1.svc.cluster.local
+  ports:
+  - port: 2181
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper-2
+  namespace: dc3
+spec:
+  type: ExternalName
+  externalName: zookeeper-2.dc2.svc.cluster.local
+  ports:
+  - port: 2181
+
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: zookeeper-3
-  namespace: dc1
+  namespace: dc3
 spec:
   selector:
     app: zookeeper-3
@@ -25,7 +49,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: zookeeper-3
-  namespace: dc1
+  namespace: dc3
   labels:
     app: zookeeper-3
 spec:
